# tamagoh

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cabal-bench.project  cabal-specialise.project  cabal.project  cabal.project.freeze  fourmolu.yaml  tamagoh.cabal
.agents/hooks/: cabal-gild-post-tool-use.sh  collect-touched-files.sh  haskell-format-post-tool-use.sh
.codex/: hooks.json
.codex/skills/haddock/: SKILL.md
.codex/skills/haddock/scripts/: locate-dep.sh
.codex/skills/haskell/: SKILL.md
.codex/skills/haskell-cabal-gild/: SKILL.md
.codex/skills/haskell-format/: SKILL.md
.codex/skills/hoogle/: SKILL.md
.codex/skills/hoogle/scripts/: hoogle-init-db.sh  hoogle-remote.sh  hoogle-search.sh
.github/workflows/: haskell.yml
bench/: hashmap.hs  math.hs
ci/configs/: ghc-9.10.3.project  ghc-9.12.2.project  ghc-9.12.3.project  ghc-9.14.1-head.project
ci/scripts/: collect-bins.sh
doctest/: DocTest.hs
internal/bench-utils/Tamagoh/Bench/: Math.hs  Orphans.hs
src/Algebra/: Semilattice.hs
src/Control/Monad/Borrow/Pure/: Clone.hs  Freeze.hs  Orphans.hs  Utils.hs
src/Data/: Trie.hs
src/Data/EGraph/: Immutable.hs  Saturation.hs  Types.hs
src/Data/EGraph/EMatch/: Backtrack.hs  Relational.hs  Types.hs
src/Data/EGraph/EMatch/Relational/: Build.hs  Database.hs  Query.hs  Types.hs
src/Data/EGraph/Saturation/: Scheduler.hs
src/Data/EGraph/Types/: EClassId.hs  EClasses.hs  EGraph.hs  ENode.hs  Language.hs  Pattern.hs  Term.hs
src/Data/EGraph/Types/EClasses/: Internal.hs
src/Data/EGraph/Types/EGraph/: Internal.hs  Refill.hs
src/Data/HasField/: Linear.hs
src/Data/HashMap/Mutable/Linear/: Borrowed.hs
src/Data/HashMap/Mutable/Linear/Borrowed/: Internal.hs  UnrestrictedValue.hs
src/Data/HashMap/Mutable/Linear/Borrowed/UnrestrictedValue/: Frozen.hs  Internal.hs
src/Data/HashMap/RobinHood/Mutable/: Linear.hs
src/Data/Linear/Witness/: Compat.hs
src/Data/MRef/Linear/: Borrowed.hs
src/Data/Record/: Linear.hs
src/Data/Set/Mutable/Linear/: Borrowed.hs
src/Data/Set/Mutable/Linear/Borrowed/: Internal.hs
src/Data/UnionFind/: Linear.hs
src/Data/UnionFind/Linear/: Borrowed.hs  Immutable.hs  Internal.hs
src/Data/UnionFind/Linear/Borrowed/: Internal.hs
src/Data/Unrestricted/Linear/: Lifted.hs
src/Data/Vector/Unboxed/Mutable/Growable/: Borrowed.hs
src/Language/Egglog/: Core.hs
src/Text/Show/: Borrowed.hs
test/Data/EGraph/: ImmutableSpec.hs  TestUtils.hs
test/Data/EGraph/EMatch/: RelationalCases.hs  RelationalSpec.hs
test/Data/EGraph/Egg/: MathSpec.hs
test/Data/EGraph/Types/: EGraphSpec.hs
test/Data/EGraph/Types/EGraphSpec/: Cases.hs
test/Data/HashMap/Linear/: BorrowedCases.hs  BorrowedSpec.hs
test/Data/HashMap/RobinHood/Mutable/: LinearSpec.hs
test/Data/HashMap/RobinHood/Mutable/LinearSpec/: Cases.hs
test/Data/Set/Linear/: BorrowedCases.hs  BorrowedSpec.hs
test/Data/UnionFind/Linear/: BorrowedSpec.hs
