cabal-version: 3.4
name: tamagoh
version: 0.1.0.0
build-type: Simple
category: Web
-- synopsis: Short description of your package
description: Please see the README on GitHub at <https://github.com/konn/tamagoh#readme>
license: BSD-3-Clause
license-file: LICENSE
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: "2025 (c) Hiromi ISHII"
extra-doc-files:
  CHANGELOG.md
  README.md

bug-reports: https://github.com/konn/tamagoh/issues
homepage: https://github.com/konn/tamagoh#readme

source-repository head
  type: git
  location: https://github.com/konn/tamagoh.git

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: GHC2021
  build-depends: base >=4.18 && <5
  build-depends:
    linear-array-extra,
    linear-base,
    pure-borrow,
    vector,

library
  import: defaults
  build-depends:
    containers,
    data-fix,
    deriving-compat,
    dlist,
    fmlist,
    hashable,
    indexed-traversable,
    linear-generics,
    linear-witness,
    recursion-schemes,
    strict,
    transformers,
    unordered-containers,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs
  exposed-modules:
    Control.Monad.Borrow.Pure.Orphans
    Data.EGraph.EMatch.Backtrack
    Data.EGraph.EMatch.Relational
    Data.EGraph.EMatch.Relational.Build
    Data.EGraph.EMatch.Relational.Types
    Data.EGraph.EMatch.Types
    Data.EGraph.Types
    Data.EGraph.Types.EClassId
    Data.EGraph.Types.EClasses
    Data.EGraph.Types.EGraph
    Data.EGraph.Types.ENode
    Data.EGraph.Types.Language
    Data.EGraph.Types.Pattern
    Data.HasField.Linear
    Data.HashMap.Mutable.Linear.Borrowed
    Data.Linear.Witness.Compat
    Data.MRef.Linear.Borrowed
    Data.Set.Mutable.Linear.Borrowed
    Data.Trie
    Data.UnionFind.Linear
    Data.UnionFind.Linear.Borrowed

  -- cabal-gild: discover src --include=src/**/Internal.hs
  other-modules:

executable tamagoh-exe
  import: defaults
  main-is: Main.hs
  -- cabal-gild: discover app --exclude=app/Main.hs
  other-modules:
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: tamagoh

test-suite tamagoh-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -O2
    -with-rtsopts=-N

  -- cabal-gild: discover test --exclude=test/Main.hs
  other-modules:
    Data.EGraph.Types.EGraphSpec
    Data.EGraph.Types.EGraphSpec.Cases
    Data.UnionFind.Linear.BorrowedSpec

  build-depends:
    data-fix,
    deriving-compat,
    falsify,
    hashable,
    linear-generics,
    tamagoh,
    tasty,
    tasty-hunit,

  build-tool-depends: tasty-discover:tasty-discover

test-suite tamagoh-doctest
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is: DocTest.hs
  ghc-options:
    -threaded
    -rtsopts
    -O2
    -with-rtsopts=-N

  build-depends:
    doctest-parallel,
    tamagoh,
