cabal-version: 3.4
name: tamagoh
version: 0.1.0.0
build-type: Simple
category: Web
-- synopsis: Short description of your package
description: Please see the README on GitHub at <https://github.com/konn/tamagoh#readme>
license: BSD-3-Clause
license-file: LICENSE
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: "2025 (c) Hiromi ISHII"
tested-with: ghc ==9.10.3 || ==9.12.2 || ==9.12.3 || ==9.14.1
extra-doc-files:
  CHANGELOG.md
  README.md

bug-reports: https://github.com/konn/tamagoh/issues
homepage: https://github.com/konn/tamagoh#readme

source-repository head
  type: git
  location: https://github.com/konn/tamagoh.git

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: GHC2021
  build-depends: base >=4.18 && <5
  build-depends:
    linear-array-extra,
    linear-base,
    pure-borrow,
    vector,

library
  import: defaults
  build-depends:
    bifunctors,
    containers,
    data-fix,
    deepseq,
    deriving-compat,
    dlist,
    fmlist,
    foldl,
    functor-combinators,
    generic-lens,
    hashable,
    heaps,
    hegg,
    indexed-traversable,
    lens,
    linear-generics,
    linear-witness,
    monoidal-containers,
    recursion-schemes,
    selective,
    semialign,
    strict,
    template-haskell,
    th-abstraction,
    th-desugar,
    these,
    transformers,
    unordered-containers,
    validation-selective,
    vector,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs
  exposed-modules:
    Algebra.Semilattice
    Control.Monad.Borrow.Pure.Freeze
    Control.Monad.Borrow.Pure.Orphans
    Control.Monad.Borrow.Pure.Utils
    Data.EGraph.EMatch.Backtrack
    Data.EGraph.EMatch.Relational
    Data.EGraph.EMatch.Relational.Database
    Data.EGraph.EMatch.Relational.Query
    Data.EGraph.EMatch.Types
    Data.EGraph.Immutable
    Data.EGraph.Saturation
    Data.EGraph.Types
    Data.EGraph.Types.EClassId
    Data.EGraph.Types.EClasses
    Data.EGraph.Types.EGraph
    Data.EGraph.Types.ENode
    Data.EGraph.Types.Language
    Data.EGraph.Types.Pattern
    Data.EGraph.Types.Term
    Data.HasField.Linear
    Data.HashMap.Mutable.Linear.Borrowed
    Data.Linear.Witness.Compat
    Data.Set.Mutable.Linear.Borrowed
    Data.Trie
    Data.UnionFind.Linear
    Data.UnionFind.Linear.Borrowed
    Data.UnionFind.Linear.Immutable
    Data.Unrestricted.Linear.Lifted
    Language.Egglog.Core
    Text.Show.Borrowed

  -- cabal-gild: discover src --include=src/**/Internal.hs
  other-modules:
    Data.EGraph.Types.EClasses.Internal
    Data.EGraph.Types.EGraph.Internal
    Data.HashMap.Mutable.Linear.Borrowed.Internal
    Data.Set.Mutable.Linear.Borrowed.Internal
    Data.UnionFind.Linear.Borrowed.Internal
    Data.UnionFind.Linear.Internal

executable tamagoh-exe
  import: defaults
  main-is: Main.hs
  -- cabal-gild: discover app --exclude=app/Main.hs
  other-modules:
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: tamagoh

test-suite tamagoh-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  -- cabal-gild: discover test --exclude=test/Main.hs
  other-modules:
    Data.EGraph.EMatch.RelationalCases
    Data.EGraph.EMatch.RelationalSpec
    Data.EGraph.Egg.MathSpec
    Data.EGraph.ImmutableSpec
    Data.EGraph.TestUtils
    Data.EGraph.Types.EGraphSpec
    Data.EGraph.Types.EGraphSpec.Cases
    Data.HashMap.Linear.BorrowedCases
    Data.HashMap.Linear.BorrowedSpec
    Data.Set.Linear.BorrowedCases
    Data.Set.Linear.BorrowedSpec
    Data.UnionFind.Linear.BorrowedSpec

  build-depends:
    data-fix,
    deriving-compat,
    falsify,
    hashable,
    lens,
    linear-generics,
    tamagoh,
    tamagoh:benchmark-utils,
    tasty,
    tasty-expected-failure,
    tasty-hunit,

  build-tool-depends: tasty-discover:tasty-discover
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library benchmark-utils
  import: defaults
  hs-source-dirs: internal/bench-utils
  -- cabal-gild: discover internal/bench-utils
  exposed-modules:
    Tamagoh.Bench.Math
    Tamagoh.Bench.Orphans

  build-depends:
    data-fix,
    deepseq,
    hashable,
    hegg,
    lens,
    linear-base,
    pure-borrow,
    recursion-schemes,
    tamagoh,
    unordered-containers,

benchmark tamagoh-bench-math
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: math.hs
  -- cabal-gild: discover bench --exclude=bench/Main.hs
  other-modules:
  build-depends:
    deepseq,
    hegg,
    recursion-schemes,
    tamagoh,
    tamagoh:benchmark-utils,
    tasty,
    tasty-bench,

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
